# blaze_face

./: .gitignore  CMakeLists.txt  DrawBB.py  Kconfig  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  common.mk  face_detection_front.h  face_detection_front_emul  gaptest.yml  main.c  main_fp16.c  model_decl.mk  model_rules.mk  post_process.c  post_process.h  run_meas.sh  sdk.config
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
model/: nntool_script  nntool_script_emul  nntool_script_fp16  nntool_script_hwc  nntool_script_ne16
nntool_eval/: eval_dataset.py
python_scripts/: main.py  script_detection.py
